# ARGB-Compress

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sbt  check.sh  statistic.sh
include/: common.h  decode.h  defines.h  encode.h  huffman.h  rgbTileProc.h  statistics.h  utils.h
rtl/spinal/cat/: CatConfig.scala  CatCore.scala  CatTop.scala  CommonDefines.scala  Verilog.scala
rtl/spinal/cat/decode/: DecodeUnit.scala
rtl/spinal/cat/encode/: EncodeUnit.scala  HashTable.scala
rtl/spinal/cat/utils/: Bundles.scala  CatFIFO.scala  CatMemory.scala
rtl/verilog/: .gitignore  RAM_SimpleDualPort.sv  Ram_1w_1rs.v  common.svh
sim/: CMakeLists.txt
sim/examples/decode/: sample01.txt  sample02.txt  sample03.txt  sample04.txt
sim/examples/encode/: sample01.txt  sample02.txt
sim/src/: CMakeLists.txt  CatLog.cpp  CatLog.hpp  DecodeUnitDut.cpp  DecodeUnitDut.hpp  Dut.cpp  Dut.hpp  SimDecode.cpp  VirtualMemory.cpp  VirtualMemory.hpp  sim.cpp
sim/src/common/: CMakeLists.txt  CatLog.cpp  Defines.h  Dut.cpp  Dut.hpp  VirtualMemory.cpp  VirtualMemory.hpp
sim/src/decode/: CMakeLists.txt  DecodeUnitDut.cpp  DecodeUnitDut.hpp  SimDecode.cpp
sim/src/encode/: CMakeLists.txt  EncodeUnitDut.cpp  EncodeUnitDut.hpp  SimEncode.cpp
sim/src/integrated/: CMakeLists.txt  CatCoreDut.cpp  CatCoreDut.hpp  IntegratedSimulator.cpp  IntegratedSimulator.hpp  SimCore.cpp
src/: decode.c  defines.h  encode.c  huffman.c  main.cpp  rgbTileProc.cpp  rgbTileProc.h
